added search categories

--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
 	</header>
 	<section>
 		<h3> Direct Class Search </h3>
-		<p>Quickly find a class by keyword, index #, or course ID.</p>
+		<p>Quickly find a class by keyword, index #, professor, lowest rating, or course ID.</p>
 		<select>
+			<option selected disabled>Search Category</option>
 			<option value="keyword">Keyword</option>
 			<option value="index">Index #</option>
 			<option value="course">Course ID</option>
+			<option value="professor">Professor</option>
+			<option value="rating">Lowest Rating</option>
 			<input type="text" placeholder="Search...">
 		</select>
 	</section>
 	<section>
 		<h1>Requirement Fufillment</h1>
-		<p>Select your school, and check up to four boxes below 
+		<p>Select your school, and check up to four boxes below
 		in order to find the optimal classes top fufill your requirements.</p>
 	</section>
 	<aside>
