--- a/userpage.html
+++ b/userpage.html
@@ -27,7 +27,52 @@
 		  </div>
 		</nav>
 	</header>
-
+	<div class='grid-container'>
+		<div class="username-header">
+			<h1>USERNAME - COMPLETED CLASSES</h1>
+		</div>
+		<div class="upload">
+			<h1>UPLOAD NEW TRANSCRIPT</h1>
+		</div>
+		<div class="sem1 semester">
+		</div>
+		<div class="sem2 semester">
+		</div>
+		<div class="sem1New semester">
+		</div>
+		<div class="sem2New semester">
+		</div>
+		<div class="sem3 semester">
+		</div>
+		<div class="sem4 semester">
+		</div>
+		<div class="sem3New semester">
+		</div>
+		<div class="sem4New semester">
+		</div>
+		<div class="sem5 semester">
+		</div>
+		<div class="sem6 semester">
+		</div>
+		<div class="sem5New semester">
+		</div>
+		<div class="sem6New semester">
+		</div>
+		<div class="sem7 semester">
+		</div>
+		<div class="sem8 semester">
+		</div>
+		<div class="sem7New semester">
+		</div>
+		<div class="sem8New semester">
+		</div>
+		<div class="saveChanges">
+			<h1>SAVE CHANGES</h1>
+		</div>
+		<div class="cancel">
+			<h1>CANCEL</h1>
+		</div>
+	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
