--- a/userpage.html
+++ b/userpage.html
@@ -29,10 +29,10 @@
 	</header>
 	<div class='grid-container'>
 		<div class="username-header">
-			<h1>USERNAME - COMPLETED CLASSES</h1>
+			<h1>USERNAME - COMPLETED COURSES</h1>
 		</div>
 		<div class="upload">
-			<h1>UPLOAD NEW TRANSCRIPT</h1>
+			<button type="button" class="btn btn-primary btn-lg btn-block">Upload New Transcript</button>
 		</div>
 		<div class="sem1 semester">
 		</div>
@@ -67,10 +67,10 @@
 		<div class="sem8New semester">
 		</div>
 		<div class="saveChanges">
-			<h1>SAVE CHANGES</h1>
+			<button type="button" class="btn btn-primary btn-md">Save Changes</button>
 		</div>
 		<div class="cancel">
-			<h1>CANCEL</h1>
+			<button type="button" class="btn btn-primary btn-md">Cancel</button>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
