--- a/userpage.html
+++ b/userpage.html
@@ -29,7 +29,7 @@
 	</header>
 	<div class='grid-container'>
 		<div class="username-header">
-			<h1>USERNAME - COMPLETED COURSES</h1>
+			<h1>COMPLETED COURSES</h1>
 		</div>
 		<div class="upload">
 			<button type="button" class="btn btn-primary btn-lg btn-block">Upload New Transcript</button>
