--- a/userpage.html
+++ b/userpage.html
@@ -32,9 +32,10 @@
 			<h1>COMPLETED COURSES</h1>
 		</div>
 		<div class="upload">
-			<button type="button" class="btn btn-primary btn-lg btn-block">Upload New Transcript</button>
+			<button type="button" class="btn btn-primary btn-lg upload-button">Upload New Transcript</button>
 		</div>
 		<div class="sem1 semester">
+            <h3>Fall 2017</h3>
 		</div>
 		<div class="sem2 semester">
 		</div>
@@ -67,10 +68,10 @@
 		<div class="sem8New semester">
 		</div>
 		<div class="saveChanges">
-			<button type="button" class="btn btn-primary btn-md">Save Changes</button>
+			<button type="button" class="btn btn-primary btn-lg save-button">Save Changes</button>
 		</div>
 		<div class="cancel">
-			<button type="button" class="btn btn-primary btn-md">Cancel</button>
+			<button type="button" class="btn btn-primary btn-lg cancel-button">Cancel</button>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
