--- a/index.html
+++ b/index.html
@@ -1,135 +1,142 @@
 <!DOCTYPE html>
 <!--This is the landing page-->
 <html>
-<head>
-	<title>Rutgers Course Planner++</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="resources/css/index.css">
-</head>
-<body>
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark">
-			<a class="navbar-brand" href="#">Course Planner++</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+    <head>
+        <title>Rutgers Course Planner++</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="resources/css/index.css">
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand" href="#">Course Planner++</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="#">Login</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Register</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-	<section>
-		<h3> Direct Class Search </h3>
-		<p>Quickly find a class by keyword, index #, professor, lowest rating, or course ID.</p>
-		<select>
-			<option selected disabled>Search Category</option>
-			<option value="keyword">Keyword</option>
-			<option value="index">Index #</option>
-			<option value="course">Course ID</option>
-			<option value="professor">Professor</option>
-			<option value="rating">Lowest Rating</option>
-			<input type="text" placeholder="Search...">
-		</select>
-	</section>
-	<section>
-		<h1>Requirement Fufillment</h1>
-		<p>Select your school, and check up to four boxes below
-		in order to find the optimal classes top fufill your requirements.</p>
-	</section>
-	<aside>
-		<h3>School Selection</h3>
-		<form>
-			<div class="schoolSelect">
-				<input type="radio" name="radio" id="SAS">
-				<label for="SAS">SAS</label>
-			</div>
-			<div class="schoolSelect">
-				<input type="radio" name="radio" id="BSN">
-				<label for="BSN">BSN</label>
-			</div>
-			<div class="schoolSelect">
-				<input type="radio" name="radio" id="PHA">
-				<label for="PHA">PHA</label>
-			</div>
-			<div class="schoolSelect">
-				<input type="radio" name="radio" id="ENG">
-				<label for="ENG">ENG</label>
-			</div>
-		</form>
-	</aside>
-	<section>
-		<form>
-			<div class="col1">
-				<div class="reqBoxes">
-					<h4>Natural Sciences</h4>
-					<input type="checkbox" name="checkbox" id="NS">
-					<label for="NS">NS</label>
-				</div>
-				<div class="reqBoxes">
-					<h4>Social Analysis</h4>
-					<input type="checkbox" name="checkbox" id="SCL">
-					<label for="SCL">SCL</label>
-				</div>
-				<div class="reqBoxes">
-					<h4>Historical Analysis</h4>
-					<input type="checkbox" name="checkbox" id="HST">
-					<label for="HST">HST</label>
-				</div>
-				<div class="reqBoxes">
-					<h4>Wrinting & Communication</h4>
-					<input type="checkbox" name="checkbox" id="WC">
-					<label for="WC">WC</label>
-					<input type="checkbox" name="checkbox" id="WCr">
-					<label for="WCr">WCr</label>
-					<input type="checkbox" name="checkbox" id="WCd">
-					<label for="WCd">WCd</label>
-				</div>
-			</div>
-			<div class="col2">
-				<div class="reqBoxes">
-					<h4>Contemporary Challenges</h4>
-					<input type="checkbox" name="checkbox" id="CC">
-					<label for="CC">CC</label>
-				</div>
-				<div class="reqBoxes">
-					<h4>Quantitative & Formal Reasoning</h4>
-					<input type="checkbox" name="checkbox" id="QQ">
-					<label for="QQ">QQ</label>
-					<input type="checkbox" name="checkbox" id="QR">
-					<label for="QR">QR</label>
-				</div>
-				<div class="reqBoxes">
-					<h4>Arts & Humanities</h4>
-					<input type="checkbox" name="checkbox" id="AH">
-					<label for="AH">AH</label>
-				</div>
-				<div class="reqBoxes">
-					<h4>Information Technology & Research</h4>
-					<input type="checkbox" name="checkbox" id="ITR">
-					<label for="ITR">ITR</label>
-				</div>
-			</div>
-		</form>
-		<div class="confirmationBtns">
-			<input type="button" value="Submit">
-			<input type="button" value="Clear">
-		</div>
-	</section>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Register</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <h3 class="text-center"> Direct Class Search </h3>
+            <p class="text-center">Quickly find a class by keyword, index #, professor, lowest rating, or course ID.</p>
+            <div class="dirclass">
+                <select>
+                    <option selected disabled>Search Category</option>
+                    <option value="keyword">Keyword</option>
+                    <option value="index">Index #</option>
+                    <option value="course">Course ID</option>
+                    <option value="professor">Professor</option>
+                    <option value="rating">Lowest Rating</option>
+                    <input id="dirsearch" type="text" placeholder="Search...">
+                </select>
+            </div>
+        </section>
+        <section class="reqful">
+            <h1 class="text-center">Requirement Fufillment</h1>
+            <p class="text-center">Select your school, and check up to four boxes below
+                in order to find the optimal classes top fufill your requirements.</p>
+        </section>
+
+        <section>
+            <div class="mid-container">
+                <div class="school-selecton">
+                    <h3 class="text-center">School Selection</h3>
+                    <form class="text-center">
+                        <div class="schoolSelect">
+                            <input type="radio" name="radio" id="SAS">
+                            <label for="SAS">SAS</label>
+                        </div>
+                        <div class="schoolSelect">
+                            <input type="radio" name="radio" id="BSN">
+                            <label for="BSN">BSN</label>
+                        </div>
+                        <div class="schoolSelect">
+                            <input type="radio" name="radio" id="PHA">
+                            <label for="PHA">PHA</label>
+                        </div>
+                        <div class="schoolSelect">
+                            <input type="radio" name="radio" id="ENG">
+                            <label for="ENG">ENG</label>
+                        </div>
+                    </form>
+                </div>
+                <div class="req-col1">
+                    <form>
+                        <div class="reqBoxes">
+                            <h4>Natural Sciences</h4>
+                            <input type="checkbox" name="checkbox" id="NS">
+                            <label for="NS">NS</label>
+                        </div>
+                        <div class="reqBoxes">
+                            <h4>Social Analysis</h4>
+                            <input type="checkbox" name="checkbox" id="SCL">
+                            <label for="SCL">SCL</label>
+                        </div>
+                        <div class="reqBoxes">
+                            <h4>Historical Analysis</h4>
+                            <input type="checkbox" name="checkbox" id="HST">
+                            <label for="HST">HST</label>
+                        </div>
+                        <div class="reqBoxes">
+                            <h4>Wrinting & Communication</h4>
+                            <input type="checkbox" name="checkbox" id="WC">
+                            <label for="WC">WC</label>
+                            <input type="checkbox" name="checkbox" id="WCr">
+                            <label for="WCr">WCr</label>
+                            <input type="checkbox" name="checkbox" id="WCd">
+                            <label for="WCd">WCd</label>
+                        </div>
+                    </form>
+                </div>
+                <div class="req-col2">
+                    <form>
+                        <div class="reqBoxes">
+                            <h4>Contemporary Challenges</h4>
+                            <input type="checkbox" name="checkbox" id="CC">
+                            <label for="CC">CC</label>
+                        </div>
+                        <div class="reqBoxes">
+                            <h4>Quantitative & Formal Reasoning</h4>
+                            <input type="checkbox" name="checkbox" id="QQ">
+                            <label for="QQ">QQ</label>
+                            <input type="checkbox" name="checkbox" id="QR">
+                            <label for="QR">QR</label>
+                        </div>
+                        <div class="reqBoxes">
+                            <h4>Arts & Humanities</h4>
+                            <input type="checkbox" name="checkbox" id="AH">
+                            <label for="AH">AH</label>
+                        </div>
+                        <div class="reqBoxes">
+                            <h4>Information Technology & Research</h4>
+                            <input type="checkbox" name="checkbox" id="ITR">
+                            <label for="ITR">ITR</label>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="confirmationBtns">
+                <input type="button" value="Submit">
+                <input type="button" value="Clear">
+            </div>
+        </section>
 
 
 
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-</body>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    </body>
 </html>
