userpage placerholder text/some css

--- a/account.html
+++ b/account.html
@@ -37,37 +37,148 @@
             <button type="button" class="btn btn-primary btn-lg upload-button">Upload New Transcript</button>
         </div>
         <div class="sem1 semester">
-            <h3>Fall 2017</h3>
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem2 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem1New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem2New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem3 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem4 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem3New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem4New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem5 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem6 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem5New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem6New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem7 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem8 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem7New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="sem8New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
         </div>
         <div class="saveChanges">
             <button type="button" class="btn btn-primary btn-lg save-button">Save Changes</button>
