testing for laptop viewport

--- a/account.html
+++ b/account.html
@@ -39,7 +39,7 @@
         <div class="sem1 semester">
             <h2>Fall 2017</h2>
             <ul>
-                <li>Class 1</li>
+                <li>Introduction to Database Systems</li>
                 <li>Class 2</li>
                 <li>Class 3</li>
                 <li>Class 4</li>
