changed html structure

--- a/account.html
+++ b/account.html
@@ -33,6 +33,7 @@
         <div class="username-header">
             <h1>COMPLETED COURSES</h1>
         </div>
+        <div class="divider"></div>
         <div class="upload">
             <button type="button" class="btn btn-primary btn-lg upload-button">Upload New Transcript</button>
         </div>
@@ -182,8 +183,6 @@
         </div>
         <div class="saveChanges">
             <button type="button" class="btn btn-primary btn-lg save-button">Save Changes</button>
-        </div>
-        <div class="cancel">
             <button type="button" class="btn btn-primary btn-lg cancel-button">Cancel</button>
         </div>
     </div>
