starting class page, finished up account page

--- a/account.html
+++ b/account.html
@@ -6,6 +6,7 @@
     <title>Rutgers Course Planner++</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="resources/css/resources.css">
     <link rel="stylesheet" type="text/css" href="resources/css/account.css">
 </head>
 
@@ -15,7 +16,7 @@
             <a class="navbar-brand" href="index.html">Course Planner++</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#loginForm" aria-controls="loginForm" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
-		  </button>
+		    </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="loginForm">
                 <form class="form-inline my-2 my-lg-0">
@@ -29,7 +30,7 @@
             </div>
         </nav>
     </header>
-    <div class='grid-container'>
+    <div class="grid-container">
         <div class="username-header">
             <h1>COMPLETED COURSES</h1>
         </div>
