styling changes to landing page

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <section>
             <div class="mid-container">
                 <div class="school-selecton">
-                    <h3 class="text-center">School Selection</h3>
-                    <form class="text-center">
+                    <h3 class>School Selection</h3>
+                    <form>
                         <div class="schoolSelect">
                             <input type="radio" name="radio" id="SAS">
                             <label for="SAS">SAS</label>
@@ -72,7 +72,7 @@
                     </form>
                 </div>
                 <div class="req-col1">
-                    <form>
+                    <form class="checkboxes">
                         <div class="reqBoxes">
                             <h4>Natural Sciences</h4>
                             <input type="checkbox" name="checkbox" id="NS">
@@ -100,7 +100,7 @@
                     </form>
                 </div>
                 <div class="req-col2">
-                    <form>
+                    <form class="checkboxes">
                         <div class="reqBoxes">
                             <h4>Contemporary Challenges</h4>
                             <input type="checkbox" name="checkbox" id="CC">
@@ -126,13 +126,11 @@
                     </form>
                 </div>
             </div>
-            <div class="confirmationBtns">
-                <input type="button" value="Submit">
-                <input type="button" value="Clear">
+            <div class="confirmation-btns">
+                <input class="btn" type="button" value="Submit">
+                <input class="btn" type="button" value="Clear">
             </div>
         </section>
-
-
 
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
