--- a/class.html
+++ b/class.html
@@ -33,9 +33,9 @@
     </header>
     <div class="grid-container">
         <div class="class-header">
-            <span class="header-text">Introduction to Database Systems</span>
+            <span class="header-text bold">INTRO TO DATABASE SYSTEMS</span>
             <!-- status: open -->
-            <span class="class-open">
+            <span class="status open">
               <i class="fas fa-check-circle"></i>
             </span>
             <!-- status: closed -->
@@ -44,11 +44,11 @@
                 <i class="fas fa-times-circle"></i>
             </span>
 -->
-            <button type="button" class="btn btn-primary btn-lg register-button">Register</button>
+            <div class="spacer"></div>
         </div>
         <div class="divider"></div>
         <div class="class-rating">
-            <span class="header-text">Overall Rating</span>
+            <span class="header-text bold">Overall Rating</span>
             <span class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -58,19 +58,62 @@
             </span>
         </div>
         <div class="class-metadata">
-            <span class="class-number">Course Number: 37:575:202</span>
-            <span>Registration Number: 12345</span>
-            <span>Credits: 3</span>
+            <span class="bold">Course #:</span><span class="metadata-number">37:575:202</span>
+            <span class="bold">Core Codes:</span><span class="metadata-number">WC, WCr, HST</span>
+            <span class="bold">Credits:</span><span class="metadata-number">3</span>
         </div>
-        <div class="comments-header">
+        <div class="comments-header bold">
+            <span>Comments</span>
         </div>
         <div class="class-prerequisites">
+            <span class="subheader-text bold">Required Prerequisites</span>
+            <br>
+            <span class="prereqs">DATA STRUCTURES, INTR DISCRET STRCT I, 01:013:240</span>
         </div>
         <div class="class-description">
+            <span class="subheader-text bold">Description</span>
+            <div class="subheader-text spacer"></div>
+            <span class="subheader-text bold">Taught by:</span><span class="subheader-text p-0">Professor Cohen</span>
         </div>
-        <div class="class-lectures">
+        <div class="description">
+            <p>quo esse incurreret non cernantur se id tamen ipsum quo eram mentitum a cillum 
+                iudicem legam elit laboris consequat ea iudicem amet praesentibus nostrud fore 
+                sint expetendis nostrud nulla reprehenderit id te aute coniunctione exercitation 
+                fore consequat ea praetermissum ex firmissimum senserit mandaremus ad incurreret 
+                sint summis elit probant culpa sint exquisitaque coniunctione offendit ea summis 
+                arbitrantur firmissimum summis arbitror</p>
         </div>
-        <div class="class-recitations">
+        <div class="class-sections table-responsive">
+            <span class="subheader-text bold">Sections</span>
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                    <th>Sec</th>
+                    <th>Index</th>
+                    <th>Day</th>
+                    <th>Time</th>
+                    <th>Campus</th>
+                    <th>Room</th>
+                    <th>Status</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>12345</td>
+                        <td>Tuesday</td>
+                        <td>4:45 PM - 5:40 PM</td>
+                        <td>CAC</td>
+                        <td>VH-105</td>
+                        <td>
+                            <span class="status open sections">
+                              <i class="fas fa-check-circle"></i>
+                            </span>
+                            <button type="button" class="btn btn-primary register-button">Register</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>    
         </div>
         <div class="comments">
         </div>
