added sections text

--- a/class.html
+++ b/class.html
@@ -101,8 +101,8 @@
                     <tr>
                         <td>1</td>
                         <td>12345</td>
-                        <td>Tuesday</td>
-                        <td>4:45 PM - 5:40 PM</td>
+                        <td>Tuesday<br>Wednesday<br>Thursday</td>
+                        <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
                         <td>CAC</td>
                         <td>VH-105</td>
                         <td>
