--- a/class.html
+++ b/class.html
@@ -39,12 +39,9 @@
               <i class="fas fa-check-circle"></i>
             </span>
             <!-- status: closed -->
-<!--
-            <span class="class-closed">
-                <i class="fas fa-times-circle"></i>
+            <span class="status closed">
+                <i class="fas fa-times-circle "></i>
             </span>
--->
-            <div class="spacer"></div>
         </div>
         <div class="divider"></div>
         <div class="class-rating">
@@ -73,7 +70,7 @@
         <div class="class-description">
             <span class="subheader-text bold">Description</span>
             <div class="subheader-text spacer"></div>
-            <span class="subheader-text bold">Taught by:</span><span class="subheader-text p-0">Professor Cohen</span>
+            <span class="subheader-text bold">Taught by:</span><span class="subheader-text p-0">Belowich, Alan</span>
         </div>
         <div class="description">
             <p>quo esse incurreret non cernantur se id tamen ipsum quo eram mentitum a cillum 
@@ -88,14 +85,14 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
-                    <th>Sec</th>
-                    <th>Index</th>
-                    <th>Day</th>
-                    <th>Time</th>
-                    <th>Campus</th>
-                    <th>Room</th>
-                    <th>Status</th>
-                </tr>
+                        <th>Sec</th>
+                        <th>Index</th>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Campus</th>
+                        <th>Room</th>
+                        <th class="status-header">Status</th>
+                    </tr>
                 </thead>
                 <tbody>
                     <tr>
@@ -103,13 +100,13 @@
                         <td>12345</td>
                         <td>Tuesday<br>Wednesday<br>Thursday</td>
                         <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
-                        <td>CAC</td>
-                        <td>VH-105</td>
-                        <td>
-                            <span class="status open sections">
-                              <i class="fas fa-check-circle"></i>
+                        <td>CAC<br>CAC<br>CAC</td>
+                        <td>VH-105<br><br>VH-105</td>
+                        <td class="text-center">
+                            <span class="status open sections" data-toggle="tooltip" data-placement="top" title="Class is open! Click to toggle register button & class status">
+                                <i class="fas fa-check-circle class-open"></i>
                             </span>
-                            <button type="button" class="btn btn-primary register-button">Register</button>
+                            <a class="btn btn-primary register-button bold" href="https://google.com" role="button" target="_blank" data-toggle="tooltip" data-placement="top" title="Click to toggle register button & class status">Register</a>
                         </td>
                     </tr>
                 </tbody>
@@ -118,9 +115,10 @@
         <div class="comments">
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="resources/js/class.js"></script>
 </body>
 
 </html>
