--- a/class.html
+++ b/class.html
@@ -109,6 +109,33 @@
                             <a class="btn btn-primary register-button bold" href="https://google.com" role="button" target="_blank" data-toggle="tooltip" data-placement="top" title="Click to toggle register button & class status">Register</a>
                         </td>
                     </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>12345</td>
+                        <td>Tuesday<br>Wednesday<br>Thursday</td>
+                        <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
+                        <td>CAC<br>CAC<br>CAC</td>
+                        <td>VH-105<br><br>VH-105</td>
+                        <td class="text-center">
+                            <span class="status closed sections" data-toggle="tooltip" data-placement="top" title="Class is closed! Can't register.">
+                                <i class="fas fa-times-circle"></i>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>12345</td>
+                        <td>Tuesday<br>Wednesday<br>Thursday</td>
+                        <td>4:45 PM - 5:40 PM<br>8:25 AM - 9:20 AM<br>10:45 PM - 10:50 PM</td>
+                        <td>CAC<br>CAC<br>CAC</td>
+                        <td>VH-105<br><br>VH-105</td>
+                        <td class="text-center">
+                            <span class="status open sections" data-toggle="tooltip" data-placement="top" title="Class is open! Click to toggle register button & class status">
+                                <i class="fas fa-check-circle class-open"></i>
+                            </span>
+                            <a class="btn btn-primary register-button bold" href="https://google.com" role="button" target="_blank" data-toggle="tooltip" data-placement="top" title="Click to toggle register button & class status">Register</a>
+                        </td>
+                    </tr>
                 </tbody>
             </table>    
         </div>
