fixed some css bugs and added responsiveness to class page

--- a/class.html
+++ b/class.html
@@ -45,7 +45,7 @@
         </div>
         <div class="divider"></div>
         <div class="class-rating">
-            <span class="header-text bold">Overall Rating</span>
+            <span class="header-text bold">Overall Course Rating</span>
             <span class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -140,6 +140,9 @@
             </table>    
         </div>
         <div class="comments">
+            <div class="comment">
+                
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
