added comments placeholder/css

--- a/class.html
+++ b/class.html
@@ -139,9 +139,91 @@
                 </tbody>
             </table>    
         </div>
-        <div class="comments">
+        <div class="class-comments">
             <div class="comment">
-                
+                <div class="comment-text">
+                    <p>despicationes et proident non ex exquisitaque probant offendit commodo 
+                    reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                    fabulas quae iudicem qui sint doctrina ipsum enim</p>
+                </div>
+                <div class="comment-metadata">
+                    <span class="comment-date">28 days ago</span>
+                    <span class="stars comment-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="comment-text">
+                    <p>despicationes et proident non ex exquisitaque probant offendit commodo 
+                    reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                    fabulas quae iudicem qui sint doctrina ipsum enim</p>
+                </div>
+                <div class="comment-metadata">
+                    <span class="comment-date">28 days ago</span>
+                    <span class="stars comment-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="comment-text">
+                    <p>despicationes et proident non ex exquisitaque probant offendit commodo 
+                    reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                    fabulas quae iudicem qui sint doctrina ipsum enim</p>
+                </div>
+                <div class="comment-metadata">
+                    <span class="comment-date">28 days ago</span>
+                    <span class="stars comment-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="comment-text">
+                    <p>despicationes et proident non ex exquisitaque probant offendit commodo 
+                    reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                    fabulas quae iudicem qui sint doctrina ipsum enim</p>
+                </div>
+                <div class="comment-metadata">
+                    <span class="comment-date">28 days ago</span>
+                    <span class="stars comment-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="comment-text">
+                    <p>despicationes et proident non ex exquisitaque probant offendit commodo 
+                    reprehenderit litteris eram et iis eruditionem quorum est enim tempor quo ne in 
+                    fabulas quae iudicem qui sint doctrina ipsum enim</p>
+                </div>
+                <div class="comment-metadata">
+                    <span class="comment-date">28 days ago</span>
+                    <span class="stars comment-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
