made parsed pdf text display in html for testing

--- a/account.html
+++ b/account.html
@@ -38,6 +38,9 @@
         <div class="upload">
             <button type="button" class="btn btn-primary btn-lg upload-button">Upload New Transcript</button>
         </div>
+        <div id="pdf-text"><div id="loading">LOADING</div></div>
+        
+<!--
         <div class="sem1 semester">
             <h2>Fall 2017</h2>
             <ul>
@@ -182,6 +185,7 @@
                 <li>Class 4</li>
             </ul>
         </div>
+-->
         <div class="saveChanges">
             <button type="button" class="btn btn-primary btn-lg save-button">Save Changes</button>
             <button type="button" class="btn btn-primary btn-lg cancel-button">Cancel</button>
