--- a/account.html
+++ b/account.html
@@ -36,7 +36,7 @@
         </div>
         <div class="divider"></div>
         <div class="upload">
-            <button type="button" class="btn btn-primary btn-lg upload-button">Upload New Transcript</button>
+            <button type="button" class="btn btn-primary btn-lg upload-button" data-toggle="tooltip" data-placement="bottom" title="Upload your official Rutgers transcript here!">Upload New Transcript</button>
         </div>
         <div id="pdf-text"><div id="loading">LOADING</div></div>
         
