fixed some css, working on pdf parsing

--- a/account.html
+++ b/account.html
@@ -32,15 +32,31 @@
     </header>
     <div class="grid-container">
         <div class="username-header">
-            <h1>COMPLETED COURSES</h1>
+            <span class="header-text bold">COMPLETED COURSES</span>
         </div>
         <div class="divider"></div>
         <div class="upload">
             <button type="button" class="btn btn-primary btn-lg upload-button" data-toggle="tooltip" data-placement="bottom" title="Upload your official Rutgers transcript here!">Upload New Transcript</button>
         </div>
-        <div id="pdf-text"><div id="loading">LOADING</div></div>
-        
-<!--
+<!--        <div id="pdf-text"><div id="loading">LOADING</div></div>-->
+        <div class="external semester">
+            <h2>External Examinations</h2>
+            <ul>
+                <li>Introduction to Database Systems</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="transfer semester">
+            <h2>Transfer Courses</h2>
+            <ul>
+                <li>Introduction to Database Systems</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
         <div class="sem1 semester">
             <h2>Fall 2017</h2>
             <ul>
@@ -51,24 +67,6 @@
             </ul>
         </div>
         <div class="sem2 semester">
-            <h2>Fall 2017</h2>
-            <ul>
-                <li>Class 1</li>
-                <li>Class 2</li>
-                <li>Class 3</li>
-                <li>Class 4</li>
-            </ul>
-        </div>
-        <div class="sem1New semester">
-            <h2>Fall 2017</h2>
-            <ul>
-                <li>Class 1</li>
-                <li>Class 2</li>
-                <li>Class 3</li>
-                <li>Class 4</li>
-            </ul>
-        </div>
-        <div class="sem2New semester">
             <h2>Fall 2017</h2>
             <ul>
                 <li>Class 1</li>
@@ -95,24 +93,6 @@
                 <li>Class 4</li>
             </ul>
         </div>
-        <div class="sem3New semester">
-            <h2>Fall 2017</h2>
-            <ul>
-                <li>Class 1</li>
-                <li>Class 2</li>
-                <li>Class 3</li>
-                <li>Class 4</li>
-            </ul>
-        </div>
-        <div class="sem4New semester">
-            <h2>Fall 2017</h2>
-            <ul>
-                <li>Class 1</li>
-                <li>Class 2</li>
-                <li>Class 3</li>
-                <li>Class 4</li>
-            </ul>
-        </div>
         <div class="sem5 semester">
             <h2>Fall 2017</h2>
             <ul>
@@ -123,24 +103,6 @@
             </ul>
         </div>
         <div class="sem6 semester">
-            <h2>Fall 2017</h2>
-            <ul>
-                <li>Class 1</li>
-                <li>Class 2</li>
-                <li>Class 3</li>
-                <li>Class 4</li>
-            </ul>
-        </div>
-        <div class="sem5New semester">
-            <h2>Fall 2017</h2>
-            <ul>
-                <li>Class 1</li>
-                <li>Class 2</li>
-                <li>Class 3</li>
-                <li>Class 4</li>
-            </ul>
-        </div>
-        <div class="sem6New semester">
             <h2>Fall 2017</h2>
             <ul>
                 <li>Class 1</li>
@@ -167,6 +129,78 @@
                 <li>Class 4</li>
             </ul>
         </div>
+        <div class="externalNew semester">
+            <h2>External Examinations</h2>
+            <ul>
+                <li>Introduction to Database Systems</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="transferNew semester">
+            <h2>Transfer Courses</h2>
+            <ul>
+                <li>Introduction to Database Systems</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem1New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem2New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem3New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem4New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem5New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem6New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
         <div class="sem7New semester">
             <h2>Fall 2017</h2>
             <ul>
@@ -185,7 +219,6 @@
                 <li>Class 4</li>
             </ul>
         </div>
--->
         <div class="saveChanges">
             <button type="button" class="btn btn-primary btn-lg save-button">Save Changes</button>
             <button type="button" class="btn btn-primary btn-lg cancel-button">Cancel</button>
