index @media work

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="reqful">
             <h1 class="reqful-h">Requirement Fufillment</h1>
             <p class="reqful-p">Select your school, and check up to four boxes below
-                in order to find <br> the optimal classes top fufill your requirements.</p>
+                in order to find <br> the optimal classes to fulfill your requirements.</p>
         </section>
 
         <section>
