added missing ah selections

--- a/index.html
+++ b/index.html
@@ -117,8 +117,14 @@
                         </div>
                         <div class="reqBoxes">
                             <h4>Arts & Humanities</h4>
-                            <input type="checkbox" name="checkbox" id="AH">
-                            <label class="cb" for="AH">AH</label>
+                            <input type="checkbox" name="checkbox" id="AHo">
+                            <label class="cb" for="AHo">AHo</label>
+                            <input type="checkbox" name="checkbox" id="AHp">
+                            <label class="cb" for="AHp">AHp</label>
+                            <input type="checkbox" name="checkbox" id="AHq">
+                            <label class="cb" for="AHq">AHq</label>
+                            <input type="checkbox" name="checkbox" id="AHr">
+                            <label class="cb" for="AHr">AHr</label>
                         </div>
                         <div class="reqBoxes">
                             <h4>Information Technology & Research</h4>
