FINALLY GOT PDF PARSING ALGORITHM TO WORK WOOOOOOOOOOO there's still so much more to do :(

--- a/account.html
+++ b/account.html
@@ -38,7 +38,7 @@
         <div class="upload">
             <button type="button" class="btn btn-primary btn-lg upload-button" data-toggle="tooltip" data-placement="bottom" title="Upload your official Rutgers transcript here!">Upload New Transcript</button>
         </div>
-<!--        <div id="pdf-text"><div id="loading">LOADING</div></div>-->
+        <div id="pdf-text"><div class="lds-dual-ring" id="loading"></div></div>
         <div class="external semester">
             <h2>External Examinations</h2>
             <ul>
@@ -129,6 +129,42 @@
                 <li>Class 4</li>
             </ul>
         </div>
+        <div class="sem9 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem10 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem11 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem12 semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
         <div class="externalNew semester">
             <h2>External Examinations</h2>
             <ul>
@@ -211,6 +247,42 @@
             </ul>
         </div>
         <div class="sem8New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem9New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem10New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem11New semester">
+            <h2>Fall 2017</h2>
+            <ul>
+                <li>Class 1</li>
+                <li>Class 2</li>
+                <li>Class 3</li>
+                <li>Class 4</li>
+            </ul>
+        </div>
+        <div class="sem12New semester">
             <h2>Fall 2017</h2>
             <ul>
                 <li>Class 1</li>
